--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> <html> <head> <link rel="manifest" href="/germes/manifest.json">
-<meta name="theme-color" content="#FFFFFF">
+<meta name="theme-color" content="#000000">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Germes-Бытовая техника">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
