--- a/mobile.html
+++ b/mobile.html
@@ -174,12 +174,6 @@ style="padding:0 15px;">
 <a class="t-menu__link-item"
 href="https://germes.cc/about" data-menu-submenu-hook="" data-menu-item-number="4">
 Контакты
-</a> </li> 
-<li class="t228__list_item"
-style="padding:0 0 0 15px;"> 
-<a class="t-menu__link-item"
-href="#popup:myform" data-menu-submenu-hook="" data-menu-item-number="5">
-Заказать обратный звонок
 </a> </li> </ul> </nav> </div> 
 <div class="t228__rightside"> 
 <div class="t228__rightcontainer"> 
@@ -224,10 +218,6 @@ href="https://germes.cc/delivery" data-menu-submenu-hook="" data-menu-item-numbe
 style="padding:0 15px;"> <a class="t-menu__link-item"
 href="https://germes.cc/about" data-menu-submenu-hook="" data-menu-item-number="4">
 Контакты
-</a> </li> <li class="t228__list_item"
-style="padding:0 0 0 15px;"> <a class="t-menu__link-item"
-href="#popup:myform" data-menu-submenu-hook="" data-menu-item-number="5">
-Заказать обратный звонок
 </a> </li> </ul> </nav> </div> <div class="t228__rightside"> <div class="t228__rightcontainer"> <div class="t-sociallinks"> <ul role="list" class="t-sociallinks__wrapper" aria-label="Соц. сети"> <!-- new soclinks --><li class="t-sociallinks__item t-sociallinks__item_vk"><a href="https://vk.com/germes.simf" target="_blank" rel="nofollow" aria-label="vk" style="width: 30px; height: 30px;"><svg class="t-sociallinks__svg" role="presentation" width=30px height=30px viewBox="0 0 100 100" fill="none"
 xmlns="http://www.w3.org/2000/svg"> <path fill-rule="evenodd" clip-rule="evenodd"
 d="M50 100c27.614 0 50-22.386 50-50S77.614 0 50 0 0 22.386 0 50s22.386 50 50 50ZM25 34c.406 19.488 10.15 31.2 27.233 31.2h.968V54.05c6.278.625 11.024 5.216 12.93 11.15H75c-2.436-8.87-8.838-13.773-12.836-15.647C66.162 47.242 71.783 41.62 73.126 34h-8.058c-1.749 6.184-6.932 11.805-11.867 12.336V34h-8.057v21.611C40.147 54.362 33.838 48.304 33.556 34H25Z"
@@ -492,7 +482,7 @@ function smartRedirect(searchQuery) {
 <!-- Мобильное меню внизу -->
 <div class="mobile-bottom-menu">
     <div class="menu-items">
-        <a href="https://berdiyev-english.github.io/germes" class="menu-item">
+        <a href="" class="menu-item">
             <svg class="menu-icon" viewBox="0 0 24 24">
                 <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z" fill="#fff"/>
             </svg>
